version 1.3.1
- Add groupwise heteroskasticity test for panel data
- Extend handling of missing observations in panel context,
  including case of unbalanced panels (to some degree)
- Fix for appending observations (built-in spreadsheet): plotting
  vars were not being automatically extended
- Fix for deleting variables: don't show the "variables have been
  renumbered" message if the only vars to be renumbered are
  hidden ones

11/15/2004 version 1.3.0
- add "append" command, to append data to the current dataset,
  as in the gui File/Append data
- add KPSS stationarity test ("kpss" command, Jack Lucchetti)
- fix bug: data importers were accepting duplicate names for
  variables
- XLS importer: handle string formulas; fix handling of large
  string tables (SST and CONTINUE records)
- fix bug: error in printing of model selection statistics for
  very large or small values on Windows
- fix bug in running scripts from the gretl console: file was 
  not closed when an error was encountered
- fix bug in Prais-Winsten estimator
- fix bug in influential observations printout, for non-
  English locales
- revamp the Dickey-Fuller test functionality, with more
  options, clearer presentation (I hope), and p-values
  using James MacKinnon's code (JAE, 1996)
- fix panel data bugs: observation strings were broken for
  frequency greater than 99, and the "panel" command did not
  obey the "cross-section" option (thanks to Mihai Nica for
  the report)
- frequency plot, against gamma distribution: add Locke's
  nonparametric test for the null hypothesis that the variable
  in question is gamma
- add facility to generate cross-sectional unit dummies with
  panel data ("genr unitdum")
- add facility for nesting loops and fix some loop bugs
- fix some bugs in LaTeX equation display
- fix some breakage in online help system (e.g. for boxplots)
- add support for Latin 2 characters in gnuplot graphs
- add support for compacting daily data to weekly or monthly