@@ -1,4 +1,9 @@
 version 1.3.1
+- Add univariate kernel density estimation (under the Variable
+  menu in the gui program -- no script counterpart)
+- Purge the lesser-used model selection statistics, and use
+  the original formulae for AIC and Schwarz's BIC
+- Improve feel of data editing spreadsheet, gtk2 version
 - Add groupwise heteroskasticity test for panel data
 - Extend handling of missing observations in panel context,
   including case of unbalanced panels (to some degree)
@@ -7,6 +12,8 @@ version 1.3.1
 - Fix for deleting variables: don't show the "variables have been
   renumbered" message if the only vars to be renumbered are
   hidden ones
+- Fix newly introduced bug in time-series graphs: don't show two y 
+  axes if only one is actually used
 
 11/15/2004 version 1.3.0
 - add "append" command, to append data to the current dataset,
